Fixing the text issues on redirects
Realised that some of the overlaps were occuring at points where I had put links. I had added <em> tags around the content I wanted to display for the link. Removing these has corrected the issue for that section.

Adding in the property word-break:normal has fixed the error happening in other places.

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,7 @@
+p {
+  word-break: normal
+} // I don't know why I need this!?!?!?!?
+
 .text-with-side-image {
   @include outer-container;
   @include span-columns(12);
